# AI_project

./: .gitignore  README.md  app.py  asr_model.py  audio_player.py  pyproject.toml  run.ps1  run.sh  script.txt
